helm/common/istio/gateway/platform/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - name: platform
      port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - dev-kiali.custellax.com
